--- a/main.css
+++ b/main.css
@@ -6,3 +6,33 @@ body {
     padding-bottom: 20px;
     color: green;
 }
+
+.paraimg1, .paraimg2, .paraimg3{
+    position: relative;
+    opacity: 0.70;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* Fixed = parallax effect, scroll = normal */
+    background-attachment: fixed;
+}
+
+.paraimg1{
+    background-image: url('assets/photos/skate-park-raw.jpg');
+    min-height: 20vw;
+}
+
+.ptext{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: #000;
+    font-size:27px;
+    letter-spacing: 8px;
+    text-transform: uppercase;
+}
+
+.ptext .border-trans{
+    background-color: transparent;
+}
