--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 /* NOTE: Do not edit the Bootstrap CSS files. */
 
 body{
-    background-color: #f3e17d;
+    background: linear-gradient(90deg, #FDBB2D 0%, #22C1C3 100%);
 }
 
 .paraimg1, .paraimg2, .paraimg3{
@@ -36,6 +36,7 @@ body{
     width: 100%;
     text-align: center;
     color: #000;
+    background-color: rgb(0, 0, 0, 0.1);
     font-size:27px;
     letter-spacing: 8px;
     text-transform: uppercase;
@@ -43,4 +44,10 @@ body{
 
 .ptext .border-trans{
     background-color: transparent;
+}
+
+.footer-flex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
